# cwal

./: .gitattributes  .gitignore  BUILDING.txt  CMakeLists.txt  GNUmakefile.in  README.md  _subdir.make  auto.def  auto.make.in  createDists.sh  make-cliapp.make.in  make-cwal-only.make  make-cwal.make.in  make-s2.make.in  make-t10n.make.in  make-whcl.make.in  manifest  manifest.uuid  shakenmake.make
.fossil-settings/: binary-glob  crlf-glob
autosetup/: wh-common.tcl
doc/: Doxyfile-amalgamation.in  Doxyfile.in  GNUmakefile  fossil-doc.css
doc/css/: skin-export.config  skin-overrides.css
doc/highlightjs/: README.md  highlight-cwal.min.js  hljs-s2.js
docker/: Dockerfile-cwal-static  README.md  build-static-cwal.bash
include/wh/: libcwal.h  libs2.h  libwhcl.h
s2/: GNUmakefile  array.c  auto.make.in  c9n.c  c9n.h  createSignatureTypeList.sh  enum.c  eval.c  fs.c  func.c  hash.c  index.md  io.c  mod.c  number.c  ob.c  ops.c  pf.c  pptest.cpp  protos.c  r-tester.sh  reportFromVg.s2  s2-grammar-ebnf.txt  s2-keyword-hasher.s2  s2.c  s2_internal.h  s2sh.s2  s2sh.sh  shell.c  shell2.c  shell_common.c  shell_extend.c  str.c  strftime.c  t10n.c  test-c9n.s2  test.c  time.c  tmpl.c  unix.c  (+1 more)
s2/bench/: 000-000-fisqrt.c  000-000-fisqrt.s2
s2/ffi/: test_ffi.s2  test_glut.s2  test_import.s2  test_map.s2
s2/linenoise/: README-linenoise.txt
s2/manual/: _page-template.md  doc-maintenance.md  essay-parens.md  grammar.md  incompatible-changes.md  index.md  internals.md  keyword-eval.md  keyword-flow-control.md  keyword-import.md  keyword-new.md  keyword-pragma.md  keyword-typeinfo.md  keywords.md  misbehaviours.md  misc-disable.md  misc-fs.md  misc-index.md  misc-io.md  misc-json.md  misc-memcap.md  misc-ob.md  misc-time.md  misc-tmpl.md  operators.md  prologue-intro.md  retrospective-2019.md  s2-from-c.md  s2-home.md  s2sh.md  s2sh2.md  s2v2.md  snippets.md  symbol-resolution.md  tips-and-tricks.md  todos.md  type-array.md  type-buffer.md  type-enum.md  type-exception.md  (+9 more)
s2/mod/: GNUmakefile  index.md  minify.s2  mod_s2.h  mod_s2_script.h  module-common.make
s2/require.d/: cliargs.s2  installModule.test.s2  iterate.s2  json2.test.s2  modeler.s2  modeler.test.s2  newOp.s2  newOp.test.s2  onTrigger.s2  onTrigger.test.s2  onTrigger2.s2  onTrigger2.test.s2  require.s2
s2/toys/: fork.s2  funcbind.s2  newOp.s2  r-cliargs.s2  r-json.s2  r-tmpl.s2  require-demo.s2  require-import-1.s2  require-import-2.s2  s2InternalExperiment.s2  strftime.s2  tmpl-demo.s2  tmpl-demo.tmpl
s2/unit/: 003-000-string-ops.s2  700-000-foreach.s2  850-000-pragma.s2  Makefile
src/: GNUmakefile  cwal.c  cwal_format.c  cwal_internal.h  cwal_json.c  cwal_printf.c  cwal_utf.c  sanity.c  test.c
src/JSON_parser/: JSON_parser.c
src/manual/: index.md  scoping.md  values.md
t10n/: GNUmakefile  c9n.c  c9n.h  i12n.h  t10n.c  t10n.h  test.c  test1.t10n
th1ish/: README-th1ish.txt
tools/: Makefile  minihash.c  mkcdep.c  tochararray.c  ucd2casefold
upstream/: HISTORY
whcl/: 3.whcl  4.whcl  GNUmakefile  createHashes.sh  dump-whcl-protos.whcl  expr.c  foreach.c  fs.c  index.md  internal.h  kwhash.c  kwhasher.c  makeModMake.sh  math.c  mod.c  ob.c  ops.c  os.c  pragma.c  r-tester.sh  script.c  script.h  sfunc.c  strftime.c  t_array.c  t_exception.c  t_func.c  t_number.c  t_obj.c  t_pf.c  t_string.c  test.c  time.c  tmpl.c  tok1.c  tok1.h  util.c  vg.make  whcl.c  whclsh.c  (+1 more)
whcl/manual/: _page-template.md  api-fs.md  api-index.md  api-json.md  api-math.md  api-ob.md  api-os.md  api-time.md  api-tmpl.md  build.md  builtin-expr.md  builtin-info.md  builtin-new.md  builtin-pragma.md  builtin-proc.md  builtins.md  flow-control.md  grammar.md  index.md  symbol-resolution.md  t10n.md  tips-tricks.md  todo.md  type-array.md  type-buffer.md  type-exception.md  type-intro.md  type-number.md  type-object.md  type-pathfinder.md  type-script.md  type-string.md  variables.md  whclsh.md
whcl/mod/: index.md  mod_whcl_script.h  module-common.make
whcl/require.d/: index.md  require.whcl  (+2 more)
(+249 files in other folders)
